--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 1.9.0
 Date: 2016-01-04
 Author: Ville-Petteri Makinen, Le Shu, Yuqi Zhao, Zeyneb Kurt, Bin Zhang,
     Xia Yang
-Maintainer: Zeyneb Kurt <zeyneb@ucla.edu>
+Maintainer: Zeyneb Kurt <zeynebkurt@gmail.com>
 Description: The Mergeomics pipeline serves as a flexible framework for 
     integrating multidimensional omics-disease associations, functional
     genomics,  canonical pathways and gene-gene interaction networks to
